--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ html, body, .console, #inputField, #autocomplete, button, .bookmark {
   width: 100%;
   height: 50px;
   overflow-x: auto;
-  overflow-y: hidden;
+  overflow-y: visible; /* Changed to allow dropdowns to render below */
   z-index: 1000;
   box-sizing: border-box;
   white-space: nowrap;
@@ -57,8 +57,8 @@ html, body, .console, #inputField, #autocomplete, button, .bookmark {
   text-align: center;
   font-size: 24px;
   color: var(--text-color);
-  margin: 10px 0;
-  padding-top: 60px; /* Space from top to account for fixed #bookmarksBar */
+  margin: 0;
+  padding-top: 70px; /* Increased to ensure visibility below #bookmarksBar */
   z-index: 500; /* Lower than dropdowns */
 }
 
@@ -96,8 +96,8 @@ html, body, .console, #inputField, #autocomplete, button, .bookmark {
 .container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 60px);
-  margin-top: 0; /* Adjusted since title is separate */
+  height: calc(100vh - 110px); /* Adjusted for title height + padding */
+  margin-top: 60px; /* Space for title */
   box-sizing: border-box;
 }
 
